# mizu

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  riscv64g-unknown-mizu-elf.json  rustfmt.toml
bot/: Cargo.toml
bot/src/: discord.rs  discord_ex.rs  dump_performance.rs  execution_context.rs  halt.rs  http.rs  interrupt.rs  log.rs  main.rs  object_storage.rs  sipi.rs  time.rs
bot/src/environment/: discord.rs  discord_ex.rs  dump_performance.rs  halt.rs  http.rs  interrupt.rs  log.rs  mod.rs  object_storage.rs  png.rs  sipi.rs  time.rs
bot/temp/: main  main.c
hal/: Makefile  add-addi.s  discord.h  hal.c  main.c  memmap.ld  object_storage.h  syscalls.h
hal-c/: discord.h  hal.h  http.h  main.c  syscalls.h
hal-rs/: Cargo.toml
hal-rs/discord/: Cargo.toml  build.rs
hal-rs/discord/src/: discord.proto  lib.rs
hal-rs/hal/: Cargo.toml
hal-rs/hal/src/: alloc.rs  debug.rs  discord.rs  ivt.rs  lib.rs  panic.rs  perf.rs  print.rs  time.rs
hal-rs/hal/src/device/: png.rs
hal-rs/hwconst/: Cargo.toml
hal-rs/hwconst/src/: csr.rs  lib.rs  memory.rs
hal-rs/macros/: Cargo.toml
hal-rs/macros/src/: lib.rs
hal-rs/src/: alloc.rs  debug.rs  discord.rs  ivt.rs  lib.rs  power.rs  print.rs  rand.rs
hal-rs/types/: Cargo.toml
hal-rs/types/src/: lib.rs  syscall.rs
hal-types/: Cargo.toml
hal-types/src/: discord.rs  lib.rs
runtime/: Cargo.toml
runtime/src/: address_decoder.rs  apic.rs  bus.rs  cpu.rs  csr.rs  dram.rs  exception.rs  interrupt.rs  isolate.rs  lib.rs  memory.rs  param.rs  perf_counter.rs  state_flow.rs
runtime/src/cpu/: amo.rs  auipc.rs  branch.rs  instruction.rs  jal.rs  jalr.rs  load.rs  load_fp.rs  lui.rs  mod.rs  op.rs  op_32.rs  op_fp.rs  op_imm.rs  op_imm_32.rs  store.rs  store_fp.rs  system.rs
temp/: Cargo.toml  link.x
temp/.cargo/: config.toml
temp/src/: main.rs  panic.rs  prelude.rs
