[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
paste = "1.0.15"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread", "macros"] }
