[package]
name = "temp"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", default-features = false }
embedded-graphics = "0.8.1"
jpeg-encoder = { version = "0.6.0", default-features = false }
mizu-hal = { path = "../hal-rs/hal", features = [] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
